[package]
name = "syntactic-for"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A syntactic 'for' loop macro"
repository = "https://github.com/xlambein/syntactic-for"
keywords = ["macro"]
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
